--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
     </div>
 
-    <script src="//unpkg.com/navigo"></script>
+    <script src="//unpkg.com/navigo@6"></script>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
