--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
     </style>
 
-    <div class="app">
+    <div id="app">
 
     </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -50,6 +50,7 @@
         const db = firebase.firestore();
     </script>
     <script src="//unpkg.com/navigo@6"></script>
+
     <script src="./index.js" type="module"></script>
 </body>
 
